# coman

./: Cargo.toml  README.md
src/: args.rs  command.rs  config.rs  main.rs  repo.rs  run.rs  ui.rs
src/command/: build.rs  cmake.rs  debug.rs  default_coman.toml  init.rs  run.rs  test.rs
src/run/: build.rs  clean.rs  cmake.rs  debug.rs  default_coman.toml  init.rs  run.rs  test.rs
src/ui/: step.rs
