[package]
name = "coman"
version = "0.2.1"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Easily run and test your programming contest solutions"
homepage = "https://github.com/j-tai/coman"
documentation = "https://github.com/j-tai/coman/wiki"
repository = "https://github.com/j-tai/coman"
readme = "README.md"

[dependencies]
getargs = "0.4.1"
serde = { version = "1.0.115", features = ["derive"] }
toml = "0.5.6"
walkdir = "2.3.1"
xz2 = "0.1.6"
