[package]
name = "coman"
version = "0.3.1"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Easily run and test your programming contest solutions"
homepage = "https://github.com/j-tai/coman"
documentation = "https://github.com/j-tai/coman/wiki"
repository = "https://github.com/j-tai/coman"
readme = "README.md"

[dependencies]
alphanumeric-sort = "1.4.4"
anyhow = "1.0.58"
getargs = "0.5.0"
serde = { version = "1.0.138", features = ["derive"] }
thiserror = "1.0.31"
toml = "0.5.9"
walkdir = "2.3.2"
xz2 = "0.1.7"
